--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
 body{
   background-color: black;
 }
+
+@keyframes slide-in {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-out {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+}
+
+/* Create custom Tailwind CSS classes */
+.animate-slide-in {
+  animation: slide-in 0.5s ease-in-out;
+}
+
+.animate-slide-out {
+  animation: slide-out 0.5s ease-in-out;
+}
